--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -29,7 +29,7 @@ netbird_rds_replica_count: "'1'"
 netbird_rds_instance_class: "db.t3.medium"
 netbird_rds_storage_encrypted: "'true'"
 netbird_rds_skip_final_snapshot: "'true'"
-netbird_rds_postgres_storage_size: "'100'"
+netbird_rds_postgres_storage_size: "''"
 netbird_rds_storage_type: "io1"
 netbird_rds_storage_iops: "'5000'"
 netbird_rds_allow_major_version_upgrade: "'false'"
@@ -241,7 +241,7 @@ gitlab_rds_replica_count: "'1'"
 gitlab_rds_instance_class: "db.t3.medium"
 gitlab_rds_storage_encrypted: "'true'"
 gitlab_rds_skip_final_snapshot: "'true'"
-gitlab_rds_postgres_storage_size: "'100'"
+gitlab_rds_postgres_storage_size: "''"
 gitlab_rds_storage_type: "io1"
 gitlab_rds_storage_iops: "'5000'"
 gitlab_rds_allow_major_version_upgrade: "'false'"
@@ -265,7 +265,7 @@ praefect_rds_replica_count: "'1'"
 praefect_rds_instance_class: "db.t3.medium"
 praefect_rds_storage_encrypted: "'true'"
 praefect_rds_skip_final_snapshot: "'true'"
-praefect_rds_postgres_storage_size: "'100'"
+praefect_rds_postgres_storage_size: "''"
 praefect_rds_storage_type: "io1"
 praefect_rds_storage_iops: "'5000'"
 praefect_rds_allow_major_version_upgrade: "'false'"
@@ -302,7 +302,7 @@ zitadel_rds_replica_count: "'1'"
 zitadel_rds_instance_class: "db.t3.medium"
 zitadel_rds_storage_encrypted: "'true'"
 zitadel_rds_skip_final_snapshot: "'true'"
-zitadel_rds_postgres_storage_size: "'100'"
+zitadel_rds_postgres_storage_size: "''"
 zitadel_rds_storage_iops: "'5000'"
 zitadel_rds_storage_type: "io1"
 zitadel_rds_allow_major_version_upgrade: "'false'"
@@ -349,46 +349,3 @@ capi_cluster_proxmox_host_vlan: "'127'"
 sc_metallb_ip_range_begin: "10.10.127.10"
 sc_metallb_ip_range_end: "10.10.127.20"
 ##end capi
-
-# env_common_platform db settings
-env_rdbms_provider: "rds"
-#env_common_platform db rds specific
-env_common_platform_rds_engine: "aurora-mysql"
-env_common_platform_rds_engine_version: "8.0.mysql_aurora.3.04.0"
-env_common_platform_rds_replica_count: "'1'"
-env_common_platform_rds_instance_class: "db.t3.medium"
-env_common_platform_rds_storage_encrypted: "'true'"
-env_common_platform_rds_skip_final_snapshot: "'true'"
-env_common_platform_rds_postgres_storage_size: "'100'"
-env_common_platform_rds_storage_type: "io1"
-env_common_platform_rds_storage_iops: "'5000'"
-#env_common_platform db backup settings
-env_common_platform_db_backup_retention_period: "'1'"
-env_common_platform_db_preferred_backup_window: "07:00-09:00"
-#env_common_platform db percona specific
-env_common_platform_perc_postgres_replicas: "'1'"
-env_common_platform_perc_postgres_proxy_replicas: "'1'"
-env_common_platform_perc_postgres_storage_size: "10Gi"
-env_common_platform_perc_pgdb_helm_version: "2.4.0"
-## end of env_common_platform db settings
-
-# env_common_mojaloop db settings
-#env_common_mojaloop db rds specific
-env_common_mojaloop_rds_engine: "aurora-mysql"
-env_common_mojaloop_rds_engine_version: "8.0.mysql_aurora.3.04.0"
-env_common_mojaloop_rds_replica_count: "'1'"
-env_common_mojaloop_rds_instance_class: "db.t3.medium"
-env_common_mojaloop_rds_storage_encrypted: "'true'"
-env_common_mojaloop_rds_skip_final_snapshot: "'true'"
-env_common_mojaloop_rds_postgres_storage_size: "'100'"
-env_common_mojaloop_rds_storage_type: "io1"
-env_common_mojaloop_rds_storage_iops: "'5000'"
-#env_common_mojaloop db backup settings
-env_common_mojaloop_db_backup_retention_period: "'1'"
-env_common_mojaloop_db_preferred_backup_window: "07:00-09:00"
-#env_common_mojaloop db percona specific
-env_common_mojaloop_perc_postgres_replicas: "'1'"
-env_common_mojaloop_perc_postgres_proxy_replicas: "'1'"
-env_common_mojaloop_perc_postgres_storage_size: "10Gi"
-env_common_mojaloop_perc_pgdb_helm_version: "2.4.0"
-## end of env_common_platform db settings
