--- a/gitops/argo-apps/base/netbird-pre.yaml
+++ b/gitops/argo-apps/base/netbird-pre.yaml
@@ -210,7 +210,7 @@ spec:
           - name: "vpc_cidr"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_vpc_cidr}"
 
-          - name: "rds_subnet_list"
+          - name: "subnet_list"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_rdbms_subnet_list}"
 
           - name: "cloud_region"
