--- a/gitops/applications/overlays/rdbms_provider/rds/deploy-env-onboard/db-external-name-service.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/deploy-env-onboard/db-external-name-service.yaml
@@ -16,8 +16,8 @@ spec:
     name: kubernetes-provider
   references:
     - patchesFrom:
-        apiVersion: rds.aws.crossplane.io/v1alpha1
+        apiVersion: rds.aws.upbound.io/v1beta2
         fieldPath: status.atProvider.endpoint
-        kind: DBCluster
+        kind: cluster
         name: ${ARGOCD_ENV_cluster_name}-${ARGOCD_ENV_dbdeploy_name_prefix}
       toFieldPath: spec.externalName
