--- a/gitops/argo-apps/base/crossplane-providers.yaml
+++ b/gitops/argo-apps/base/crossplane-providers.yaml
@@ -77,4 +77,4 @@ spec:
           value: "${ARGOCD_ENV_crossplane_providers_gitlab_version}"
 
         - name: "gitlab_fqdn"
-          value: "gitlab.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_domain}"
+          value: "gitlab.${ARGOCD_ENV_gitlab_dns_subdomain}"
