--- a/gitops/applications/base/netbird-post-config/kustomization.yaml
+++ b/gitops/applications/base/netbird-post-config/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - external-secret.yaml
-  - providerconfig.yaml
-  - ansiblerun.yaml
-  - netbird-post-terraform.yaml
+  - nbconfig-claim.yaml
+  - nbopbootstrap-claim.yaml
+  - nbproviderconfig.yaml
+  - ../netbird-operator
