--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/netbird-post-config/nbopinstall-claim.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/netbird-post-config/nbopinstall-claim.yaml
@@ -1,24 +1,17 @@
 apiVersion: sc.infitx.org/v1alpha1
-kind: XNBOperatorInstall
+kind: NBOperatorInstall
 metadata:
   name: sc-nboperatorinstall
-  namespace: default
+  namespace: ${ARGOCD_ENV_netbird_namespace}
 spec:
   parameters:
-    serviceUserName: sc-service-user
-    accessTokenExpiresInDays: 5
     nbManagmentURI: https://netbird.${ARGOCD_ENV_zitadel_dns_subdomain}:443
     operatorHelmVersion: 0.1.7
     operatorNamespace: ${ARGOCD_ENV_netbird_namespace}
     operatorArgoAppName: nb-op
     operatorArgoAppSourceURL: https://github.com//mojaloop/iac-modules.git
     operatorArgoAppSourceRevision: "feature/storage-cluster"
-    localAccessTokenSecretName: nb-op-access-token
-    localAccessTokenSecretNamespace: ${ARGOCD_ENV_netbird_namespace}
-    operatorClusterName: storage-cluster
   providerConfigsRef:
-    netbirdProviderConfigName: "netbird-crossplane-provider-config"
-    ccK8sProviderName: "kubernetes-provider"
     scK8sProviderName: "sc-kubernetes-provider"
   managementPolicies:
     - "*"
