--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -314,6 +314,12 @@ capi_cluster_proxmox_worker_memory: "'16384'"
 capi_cluster_proxmox_worker_replicas: "'3'"
 capi_cluster_storage_name: "pve-sdb"
 capi_rook_ceph_rgw_external_ip: "10.10.127.10"
+capi_cluster_proxmox_user: "root@pam"
+capi_cluster_proxmox_password: "test123"
+capi_cluster_proxmox_url: "10.10.127.3:8006"
+capi_cluster_kubeapi_host: "10.10.127.2"
+capi_cluster_network_gateway: "10.10.127.1"
+capi_cluster_proxmox_host_vlan: "'127'"
 ##end capi
 
 # env_common_platform db settings
