--- a/gitops/applications/overlays/rdbms_provider/rds/deploy-env-onboard/rdscluster.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/deploy-env-onboard/rdscluster.yaml
@@ -8,7 +8,7 @@ spec:
     - "*"
   providerConfigsRef:
     awsProviderConfigName: "aws-cp-upbound-provider-config"
-    ccK8sProviderName: "provider-kubernetes"
+    ccK8sProviderName: "kubernetes-provider"
   parameters:
     externalServiceName: "${ARGOCD_ENV_cluster_name}-${ARGOCD_ENV_dbdeploy_name_prefix}"
     appNamespace: "${ARGOCD_ENV_namespace}"
