--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -320,6 +320,8 @@ capi_cluster_proxmox_url: "10.10.127.3:8006"
 capi_cluster_kubeapi_host: "10.10.127.2"
 capi_cluster_network_gateway: "10.10.127.1"
 capi_cluster_proxmox_host_vlan: "'127'"
+sc_metallb_ip_range_begin: "10.10.127.10"
+sc_metallb_ip_range_end: "10.10.127.20"
 ##end capi
 
 # env_common_platform db settings
