--- a/gitops/argo-apps/overlays/local/storage-cluster/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/storage-cluster/kustomization.yaml
@@ -10,3 +10,4 @@ resources:
   - ../../../base/cert-manager.yaml
   - ../../../base/percona-operator.yaml
   - ../../../base/base-monitoring.yaml
+  - ../../../base/kyverno.yaml
