--- a/gitops/applications/base/gitlab-pre/objectstorage.yaml
+++ b/gitops/applications/base/gitlab-pre/objectstorage.yaml
@@ -9,7 +9,8 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "git-lfs-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
+    ccK8sProviderName: "kubernetes-provider"
+    namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -17,7 +18,6 @@ spec:
       deletionPolicy: "Delete"
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
-      ccK8sProviderName: "kubernetes-provider"
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_git_lfs_storage_size}"
 ---
@@ -31,7 +31,8 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-artifacts-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
+    ccK8sProviderName: "kubernetes-provider"
+    namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -39,7 +40,6 @@ spec:
       deletionPolicy: "Delete"
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
-      ccK8sProviderName: "kubernetes-provider"
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_artifacts_storage_size}"
 ---
@@ -53,7 +53,8 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-uploads-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
+    ccK8sProviderName: "kubernetes-provider"
+    namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -61,7 +62,6 @@ spec:
       deletionPolicy: "Delete"
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
-      ccK8sProviderName: "kubernetes-provider"
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_uploads_storage_size}"
 ---
@@ -75,7 +75,8 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-packages-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
+    ccK8sProviderName: "kubernetes-provider"
+    namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -83,7 +84,6 @@ spec:
       deletionPolicy: "Delete"
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
-      ccK8sProviderName: "kubernetes-provider"
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_packages_storage_size}"
 ---
@@ -97,7 +97,8 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "registry-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
+    ccK8sProviderName: "kubernetes-provider"
+    namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -105,7 +106,6 @@ spec:
       deletionPolicy: "Delete"
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
-      ccK8sProviderName: "kubernetes-provider"
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_registry_storage_size}"
 ---
@@ -119,7 +119,8 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-mr-diffs-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
+    ccK8sProviderName: "kubernetes-provider"
+    namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -127,7 +128,6 @@ spec:
       deletionPolicy: "Delete"
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
-      ccK8sProviderName: "kubernetes-provider"
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_mrdiffs_storage_size}"
 ---
@@ -141,7 +141,8 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-ci-secure-files-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
+    ccK8sProviderName: "kubernetes-provider"
+    namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -149,7 +150,6 @@ spec:
       deletionPolicy: "Delete"
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
-      ccK8sProviderName: "kubernetes-provider"
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_cisecurefiles_storage_size}"
 ---
@@ -163,7 +163,8 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-terraform-state-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
+    ccK8sProviderName: "kubernetes-provider"
+    namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -171,7 +172,6 @@ spec:
       deletionPolicy: "Delete"
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
-      ccK8sProviderName: "kubernetes-provider"
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_tfstate_storage_size}"
 ---
@@ -185,7 +185,8 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-dependency-proxy-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
+    ccK8sProviderName: "kubernetes-provider"
+    namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -193,7 +194,6 @@ spec:
       deletionPolicy: "Delete"
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
-      ccK8sProviderName: "kubernetes-provider"
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_dep_proxy_storage_size}"
 ---
@@ -207,7 +207,8 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-runner-cache-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
+    ccK8sProviderName: "kubernetes-provider"
+    namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -215,7 +216,6 @@ spec:
       deletionPolicy: "Delete"
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
-      ccK8sProviderName: "kubernetes-provider"
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_runner_cache_storage_size}"
 ---
@@ -229,7 +229,8 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-backups-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
+    ccK8sProviderName: "kubernetes-provider"
+    namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -237,7 +238,6 @@ spec:
       deletionPolicy: "Delete"
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
-      ccK8sProviderName: "kubernetes-provider"
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_runner_cache_storage_size}"
 ---
@@ -251,7 +251,8 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-backups-tmp-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
+    ccK8sProviderName: "kubernetes-provider"
+    namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -259,7 +260,6 @@ spec:
       deletionPolicy: "Delete"
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
-      ccK8sProviderName: "kubernetes-provider"
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_runner_cache_storage_size}"
 ---
