feat: Additional configs for env storage

--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage-post-config/storage-external-secrets.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage-post-config/storage-external-secrets.yaml
@@ -264,9 +264,31 @@ spec:
     template:
       type: kubernetes.io/rook
       data:
-        rook-ceph-mon-data: "{{ .ROOK_EXTERNAL_CEPH_MON_DATA }}"
+        mon-data: "{{ .ROOK_EXTERNAL_CEPH_MON_DATA }}"
   data:
     - secretKey: ROOK_EXTERNAL_CEPH_MON_DATA
       remoteRef:
         key: rook-external-config
         property: ROOK_EXTERNAL_CEPH_MON_DATA
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: rook-ceph-cluster-user-command
+  namespace: ${ARGOCD_ENV_storage_namespace}
+spec:
+  refreshInterval: 1m
+  secretStoreRef:
+    kind: SecretStore
+    name: storage-secrets-store
+  target:
+    name: rook-ceph-cluster-user-command
+    template:
+      type: kubernetes.io/rook
+      data:
+        args: "{{ .ARGS }}"
+  data:
+    - secretKey: ARGS
+      remoteRef:
+        key: rook-external-config
+        property: ARGS
