--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/deploy-env-onboard/push-storage-secrets-vault.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/deploy-env-onboard/push-storage-secrets-vault.yaml
@@ -185,3 +185,23 @@ spec:
     - match:
         remoteRef:
           remoteKey: "${ARGOCD_ENV_env_name}/rook_ceph_mon_data"
+---
+apiVersion: external-secrets.io/v1alpha1
+kind: PushSecret
+metadata:
+  name: "${ARGOCD_ENV_env_name}-rook-ceph-cluster-user-command"
+  namespace: "${ARGOCD_ENV_storage_namespace}"
+spec:
+  updatePolicy: Replace
+  deletionPolicy: Delete
+  refreshInterval: 1m
+  secretStoreRefs:
+    - name: vault-secret-store
+      kind: ClusterSecretStore
+  selector:
+    secret:
+      name: rook-ceph-cluster-user-command
+  data:
+    - match:
+        remoteRef:
+          remoteKey: "${ARGOCD_ENV_env_name}/rook_ceph_cluster_user_command"
