--- a/gitops/applications/base/crossplane-providers/aws.yaml
+++ b/gitops/applications/base/crossplane-providers/aws.yaml
@@ -62,5 +62,7 @@ apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
   name: provider-aws-rds
+  annotations:
+    argocd.argoproj.io/sync-wave: 10
 spec:
   package: xpkg.upbound.io/upbound/provider-aws-rds:v${ARGOCD_ENV_crossplane_providers_aws_rds_version}
