fix: obj provider

--- a/gitops/argo-apps/base/monitoring-pre.yaml
+++ b/gitops/argo-apps/base/monitoring-pre.yaml
@@ -54,3 +54,5 @@ spec:
           value: "${ARGOCD_ENV_monitoring_pre_loki_bucket_storage_size}"
         - name: "loki_bucket_name"
           value: "${ARGOCD_ENV_monitoring_pre_loki_bucket_name}"
+        - name: "object_storage_provider"
+          value: "${ARGOCD_ENV_monitoring_pre_object_storage_provider}"
