--- a/gitops/argo-apps/base/monitoring.yaml
+++ b/gitops/argo-apps/base/monitoring.yaml
@@ -250,6 +250,9 @@ spec:
         - name: "object_storage_host"
           value: "${ARGOCD_ENV_utils_storage_object_storage_host}"
 
+        - name: "object_storage_regional_host"
+          value: "${ARGOCD_ENV_utils_storage_object_storage_regional_host}"
+
         - name: "object_storage_regional_endpoint"
           value: "${ARGOCD_ENV_utils_storage_object_storage_regional_endpoint}"
 
