--- a/gitops/applications/base/netbird-operator/netbird-operator-values.yaml
+++ b/gitops/applications/base/netbird-operator/netbird-operator-values.yaml
@@ -6,7 +6,7 @@ ingress:
     enabled: true
   kubernetesAPI:
     enabled: true
-  #   groups: ["${ARGOCD_ENV_netbird_operator_kubeapi_group}"]
+    groups: ["${ARGOCD_ENV_netbird_operator_kubeapi_group}"]
 netbirdAPI:
   keyFromSecret: ${ARGOCD_ENV_netbird_operator_api_key_secret}
 managementURL: ${ARGOCD_ENV_netbird_operator_management_url}
