update claims for nb post config

--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/netbird-post-config/nbopbootstrap-claim.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/netbird-post-config/nbopbootstrap-claim.yaml
@@ -1,13 +1,20 @@
-apiVersion: nb.infitx.org/v1alpha1
+apiVersion: nb.mojaloop.io/v1alpha1
 kind: NBOperatorBootstrap
 metadata:
   name: sc-nboperatorbootstrap
   namespace: ${ARGOCD_ENV_netbird_namespace}
 spec:
   parameters:
+    zitadelProjectIdSecret:
+      name: ${ARGOCD_ENV_netbird_preconfig_output_secret}
+      namespace: ${ARGOCD_ENV_netbird_namespace}
+      key: "netbird_project_id"
+    groupNames:
+      admin: ${ARGOCD_ENV_netbird_rbac_admin_group}
+      externalAccess: ${ARGOCD_ENV_netbird_rbac_user_group}
+      kubeapiResourceGroup: sc-k8s
     serviceUserName: sc-service-user
     accessTokenExpiresInDays: 5
-    operatorKubeapiGroup: sc-k8s
     accessToken:
       destinationType: sc
   providerConfigsRef:
