--- a/gitops/applications/base/netbird-post-config/nbconfig-claim.yaml
+++ b/gitops/applications/base/netbird-post-config/nbconfig-claim.yaml
@@ -1,24 +1,25 @@
-apiVersion: nb.infitx.org/v1alpha1
+apiVersion: nb.mojaloop.io/v1alpha1
 kind: PostConfig
 metadata:
   name: netbird-post-config
   namespace: ${ARGOCD_ENV_netbird_namespace}
 spec:
   parameters:
-    ccClusterName: "control-center"
+    ccClusterName: ${ARGOCD_ENV_cluster_name}
     environments:
       - "dev"
       - "qa"
       - "prod"
     setupKey:
-      name: "setup-key-name"
+      name: ${ARGOCD_ENV_setup_key_secret_name}
       namespace: ${ARGOCD_ENV_netbird_namespace}
-      gwSetupKeySecretKey: "gw-setup-key-secret-key"
-      buildSetupKeySecretKey: "build-setup-key-secret-key"
-    zitadelProjectId: 123455
+    zitadelProjectIdSecret:
+      name: ${ARGOCD_ENV_netbird_preconfig_output_secret}
+      namespace: ${ARGOCD_ENV_netbird_namespace}
+      key: "netbird_project_id"
     groupNames:
-      admin: techops-admin
-      externalAccess: techops-users
+      admin: ${ARGOCD_ENV_netbird_rbac_admin_group}
+      externalAccess: ${ARGOCD_ENV_netbird_rbac_user_group}
   providerConfigsRef:
     netbirdProviderConfigName: "netbird-crossplane-provider-config"
     k8sProviderConfigName: "kubernetes-provider"
