--- a/gitops/applications/base/netbird-post-config/nbopbootstrap-claim.yaml
+++ b/gitops/applications/base/netbird-post-config/nbopbootstrap-claim.yaml
@@ -1,15 +1,23 @@
-apiVersion: nb.infitx.org/v1alpha1
+apiVersion: nb.mojaloop.io/v1alpha1
 kind: NBOperatorBootstrap
 metadata:
   name: cc-nboperatorbootstrap
   namespace: ${ARGOCD_ENV_netbird_namespace}
 spec:
   parameters:
+    zitadelProjectIdSecret:
+      name: ${ARGOCD_ENV_netbird_preconfig_output_secret}
+      namespace: ${ARGOCD_ENV_netbird_namespace}
+      key: "netbird_project_id"
+    groupNames:
+      admin: ${ARGOCD_ENV_netbird_rbac_admin_group}
+      externalAccess: ${ARGOCD_ENV_netbird_rbac_user_group}
+      kubeapiResourceGroup: ${ARGOCD_ENV_netbird_operator_kubeapi_group}
     serviceUserName: cc-service-user
     accessTokenExpiresInDays: 5
-    operatorKubeapiGroup: cc-k8s
     accessToken:
-      destinationType: cc
+      destinationType: local
+      localSecretName: ${ARGOCD_ENV_netbird_operator_api_key_secret}
   providerConfigsRef:
     netbirdProviderConfigName: "netbird-crossplane-provider-config"
     ccK8sProviderName: "cc-kubernetes-provider"
