--- a/gitops/argo-apps/base/netbird-post-config.yaml
+++ b/gitops/argo-apps/base/netbird-post-config.yaml
@@ -105,6 +105,27 @@ spec:
           - name: "argocd_namespace"
             value: "${ARGOCD_ENV_utils_argocd_helm_namespace}"
 
+          - name: "netbird_operator_helm_version"
+            value: "${ARGOCD_ENV_security_netbird_operator_helm_version}"
+
+          - name: "netbird_operator_namespace"
+            value: "${ARGOCD_ENV_security_netbird_operator_namespace}"
+
+          - name: "netbird_operator_kubeapi_group"
+            value: "${ARGOCD_ENV_security_netbird_operator_kubeapi_group}"
+
+          - name: "netbird_operator_release_name"
+            value: "${ARGOCD_ENV_security_netbird_operator_release_name}"
+
+          - name: "netbird_operator_management_url"
+            value: "https://netbird.${ARGOCD_ENV_security_netbird_dns_subdomain}:443"
+
+          - name: "netbird_operator_kubeapi_group"
+            value: "${ARGOCD_ENV_security_netbird_operator_kubeapi_group}"
+
+          - name: "netbird_operator_api_key_secret"
+            value: "nb-operator-api-key"
+
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_security_application_gitrepo_tag}
       path: gitops/applications/overlays/cloud_provider/${ARGOCD_ENV_utils_capi_cloud_provider}/storage-provider/netbird-post-config
@@ -179,3 +200,9 @@ spec:
 
           - name: "argocd_namespace"
             value: "${ARGOCD_ENV_utils_argocd_helm_namespace}"
+
+          - name: "netbird_operator_helm_version"
+            value: "${ARGOCD_ENV_security_netbird_operator_helm_version}"
+
+          - name: "netbird_operator_management_url"
+            value: "https://netbird.${ARGOCD_ENV_security_netbird_dns_subdomain}:443"
