--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -151,6 +151,9 @@ spec:
             - name: utils_kyverno_app_name
               value: "${ARGOCD_ENV_utils_kyverno_app_name}"
 
+            - name: argocd_app_namespace
+              value: "${ARGOCD_ENV_argocd_app_namespace}"
+
   providerConfigsRef:
     scK8sProviderName: sc-kubernetes-provider
     scHelmProviderName: sc-helm-provider
