fix: remove rook ceph monitoring

--- a/gitops/applications/base/monitoring-post-config/kustomization.yaml
+++ b/gitops/applications/base/monitoring-post-config/kustomization.yaml
@@ -20,7 +20,7 @@ resources:
   - istio-crs.yaml
   - mimir-alertmanager.yaml
   - mimirtool-cronjob.yaml
-  - rook-ceph-objectstore-exporter.yaml
+  #- rook-ceph-objectstore-exporter.yaml
 
 configMapGenerator:
   - name: mimir-ruler-data
