--- a/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-databases.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-databases.yaml
@@ -1,5 +1,5 @@
-rdbms_provider: in-cluster  # possbile values are rds, dbaas and incluster
-mongodb_provider: in-cluster  # possbile values are docdb, dbaas and incluster
+rdbms_provider: in-cluster  # possbile values are rds, dbaas and in-cluster
+mongodb_provider: in-cluster  # possbile values are documentdb, dbaas and in-cluster
 common_platform_db:
   app_owner: "platform"
   dbaas_resource_config:
