Test vault admin rol

--- a/gitops/applications/base/vault-post-config/external-secretstore.yaml
+++ b/gitops/applications/base/vault-post-config/external-secretstore.yaml
@@ -64,7 +64,8 @@ spec:
       auth:
         kubernetes:
           mountPath: "${ARGOCD_ENV_vault_k8s_admin_auth_path}"
-          role: ext-secret-auth
+          # role: ext-secret-auth
+          role: admin-role
           serviceAccountRef:
             name: "ext-secret-vault"
             namespace: ${ARGOCD_ENV_vault_namespace}
