--- a/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-databases.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-databases.yaml
@@ -135,7 +135,7 @@ common_mongodb:
     backup_retention_period: 1
     backup_window: 01:00-04:00
     db_name: common_database
-    delete_protection: false
+    deletion_protection: false
     engine: docdb
     engine_version: "5.0"
     family: docdb5.0
