fix: add ext service in composition

--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -75,7 +75,7 @@ crossplane_packages_sc_postgres_version: "v0.1.0-pr16-14261304175"
 crossplane_packages_sc_bootstrap_version: "v0.1.0"
 crossplane_packages_sc_nboperatorinstall_version: "v0.1.0-pr37-14402159611"
 crossplane_packages_nb_config_version: "v0.1.0-pr38-14361249221"
-crossplane_packages_aws_documentdb_version: "v0.3.0"
+crossplane_packages_aws_documentdb_version: "v0.3.0-pr50-14597997746"
 crossplane_packages_aws_rds_version: "v0.1.0-pr47-14531737956"
 velero_helm_version: "8.3.0"
 velero_plugin_version: "v1.11.1"
