--- a/gitops/applications/overlays/mongodb_provider/documentdb/deploy-env-onboard/docdbcluster.yaml
+++ b/gitops/applications/overlays/mongodb_provider/documentdb/deploy-env-onboard/docdbcluster.yaml
@@ -7,8 +7,11 @@ spec:
   managementPolicies:
     - "*"
   providerConfigsRef:
-      awsProviderConfigName: "aws-cp-upbound-provider-config"
+    awsProviderConfigName: "aws-cp-upbound-provider-config"
+    ccK8sProviderName: "kubernetes-provider"
   parameters:
+    externalServiceName: "${ARGOCD_ENV_externalservice_name}"
+    appNamespace: "${ARGOCD_ENV_namespace}"
     allowMajorVersionUpgrade: ${ARGOCD_ENV_allow_major_version_upgrade}
     applyImmediately: ${ARGOCD_ENV_apply_immediately}
     backupRetentionPeriod: ${ARGOCD_ENV_backup_retention_period}
