--- a/gitops/applications/base/monitoring-post-config/kustomization.yaml
+++ b/gitops/applications/base/monitoring-post-config/kustomization.yaml
@@ -16,11 +16,11 @@ resources:
   - dashboards-mimir.yaml
   - dashboards-mojaloop.yaml
   - dashboards-prometheus.yaml
-  - dashboards-storage.yaml
+  #- dashboards-storage.yaml
   - istio-crs.yaml
   - mimir-alertmanager.yaml
   - mimirtool-cronjob.yaml
-  - rook-ceph-objectstore-exporter.yaml
+  #- rook-ceph-objectstore-exporter.yaml
 
 configMapGenerator:
   - name: mimir-ruler-data
