--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -53,6 +53,6 @@ resources:
   # monitoring
   - ../../../base/monitoring-pre.yaml
   - ../../../base/monitoring.yaml
-  - ../../../base/monitoring-post-config.yaml
+  #- ../../../base/monitoring-post-config.yaml
   # k8s
   - ../../../base/k8s-post-config.yaml
