--- a/gitops/applications/base/monitoring/values-loki.yaml
+++ b/gitops/applications/base/monitoring/values-loki.yaml
@@ -31,7 +31,8 @@ loki:
         access_key_id: $${AWS_ACCESS_KEY_ID}
         secret_access_key: $${AWS_SECRET_ACCESS_KEY}
         bucketnames: $${BUCKET_NAME}
-
+    memberlist:
+      bind_port: 7947 # use different memberlist.bind-port to avoid loki and mimir joining same ring
 metrics:
   enabled: true
   serviceMonitor:
