attempt to fix ordering of nb post config

--- a/gitops/applications/base/netbird-post-config/nbopbootstrap-claim.yaml
+++ b/gitops/applications/base/netbird-post-config/nbopbootstrap-claim.yaml
@@ -3,6 +3,8 @@ kind: NBOperatorBootstrap
 metadata:
   name: cc-nboperatorbootstrap
   namespace: ${ARGOCD_ENV_netbird_namespace}
+  annotations:
+    argocd.argoproj.io/sync-wave: "${ARGOCD_ENV_netbird_operator_sync_wave}"
 spec:
   parameters:
     zitadelProjectIdSecret:
