--- a/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-databases.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-databases.yaml
@@ -1,6 +1,5 @@
-rdbms_provider: in-cluster  # possbile values are rds, dbaas and in-cluster
-mongodb_provider: in-cluster  # possbile values are documentdb, dbaas and in-cluster
 common_platform_db:
+  provider: in-cluster  # possbile values are rds, dbaas and in-cluster
   app_owner: "platform"
   dbaas_resource_config:
     pgdb_helm_version: "0.1.0"
@@ -67,6 +66,7 @@ common_platform_db:
     vault_master_user_password_secret_key: common_platform_db_password
     vault_instance_address_key: common_platform_db_instance_address
 common_mojaloop_db:
+  provider: in-cluster  # possbile values are rds, dbaas and in-cluster
   app_owner: "mojaloop"
   dbaas_resource_config:
     pgdb_helm_version: "0.1.0"
@@ -125,6 +125,7 @@ common_mojaloop_db:
     vault_master_user_password_secret_key: common_mojaloop_db_password
     vault_instance_address_key: common_mojaloop_db_instance_address
 common_mongodb:
+  provider: in-cluster  # possbile values are documentdb, dbaas and in-cluster
   app_owner: "mojaloop"
   dbaas_resource_config:
     pgdb_helm_version: "0.1.0"
