update loki.memberlist.join_members for port

--- a/gitops/applications/base/monitoring/values-loki.yaml
+++ b/gitops/applications/base/monitoring/values-loki.yaml
@@ -33,6 +33,8 @@ loki:
         bucketnames: $${BUCKET_NAME}
     memberlist:
       bind_port: 7947 # use different memberlist.bind-port to avoid loki and mimir joining same ring
+      join_members:
+      - {{ include "grafana-loki.gossip-ring.fullname" . }}:{{ .Values.loki.gossipRing.service.ports.http }}
   gossipRing:
     service:
       ports:
