--- a/gitops/applications/base/monitoring/values-loki.yaml
+++ b/gitops/applications/base/monitoring/values-loki.yaml
@@ -34,8 +34,8 @@ loki:
     memberlist:
       advertise_port: 7947
       bind_port: 7947 # use different memberlist.bind-port to avoid loki and mimir joining same ring
-      join_members:
-      - {{ include "grafana-loki.gossip-ring.fullname" . }}:{{ .Values.loki.gossipRing.service.ports.http }}
+      # join_members:
+      # - {{ include "grafana-loki.gossip-ring.fullname" . }}:{{ .Values.loki.gossipRing.service.ports.http }}
   gossipRing:
     service:
       ports:
