--- a/gitops/applications/base/monitoring/values-loki.yaml
+++ b/gitops/applications/base/monitoring/values-loki.yaml
@@ -34,7 +34,8 @@ loki:
     memberlist:
       advertise_port: 7947
       bind_port: 7947 # use different memberlist.bind-port to avoid loki and mimir joining same ring
-      # join_members:
+      join_members:
+      - control-center-loki-grafana-loki-gossip-ring:7947
       # - {{ include "grafana-loki.gossip-ring.fullname" . }}:{{ .Values.loki.gossipRing.service.ports.http }}
   gossipRing:
     service:
