--- a/gitops/applications/base/monitoring/kustomization.yaml
+++ b/gitops/applications/base/monitoring/kustomization.yaml
@@ -30,7 +30,7 @@ helmCharts:
     valuesFile: values-kube-prometheus.yaml
     namespace: ${ARGOCD_ENV_monitoring_namespace}
   - name: grafana-loki
-    releaseName: control-center-loki
+    releaseName: ${ARGOCD_ENV_loki_release_name}
     version: ${ARGOCD_ENV_ctrl_cntr_loki_helm_version}
     repo: oci://registry-1.docker.io/bitnamicharts
     valuesFile: values-loki.yaml
