--- a/gitops/argo-apps/base/monitoring.yaml
+++ b/gitops/argo-apps/base/monitoring.yaml
@@ -113,6 +113,9 @@ spec:
           value: "${ARGOCD_ENV_monitoring_mimir_max_label_names_per_series}"
         - name: "mimir_compactor_deletion_delay"
           value: "${ARGOCD_ENV_monitoring_mimir_compactor_deletion_delay}"
+        - name: "loki_gossip_ring_port"
+          value: "7949"
+
 
         - name: "ctrl_cntr_loki_bucket_name"
           value: "${ARGOCD_ENV_monitoring_pre_ctrl_cntr_loki_bucket_name}"
